--- a/strategy.html
+++ b/strategy.html
@@ -1,66 +1,181 @@
-<style>
-  /* General Box Styles */
-  .container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 30px auto;
-    max-width: 600px;
-    border: 2px solid #333;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Investment Strategy | Meti Alpha</title>
+  <style>
+    /* General Box Styles */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
 
-  .item {
-    border: 1px solid #ddd;
-    padding: 15px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin: 30px auto;
+      max-width: 900px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
+      border-radius: 10px;
+    }
 
-  .highlight {
-    background-color: #ffeb3b; /* Highlight for $500 row */
-    font-weight: bold;
-  }
+    .item {
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-left: 4px solid #0c6e40; /* Investment indicator color */
+      margin-bottom: 15px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
 
-  .item-header {
-    font-weight: bold;
-    background-color: #111;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    margin-bottom: 10px;
-  }
+    .item-header {
+      font-weight: bold;
+      background-color: #0c6e40; /* Dark Green for header */
+      color: white;
+      padding: 10px;
+      text-align: center;
+      font-size: 1.2rem;
+      border-radius: 8px;
+    }
 
-  .details {
-    display: flex;
-    justify-content: space-between;
-    font-size: 16px;
-  }
-</style>
+    .item-details {
+      display: flex;
+      justify-content: space-between;
+      font-size: 1rem;
+      margin-top: 15px;
+      color: #333;
+    }
 
-<div class="container">
-  <div class="item">
-    <div class="item-header">Investment Amount: $100</div>
-    <div class="details">
-      <span>Weekly Return (40%): $40</span>
-      <span>Total after 2 Weeks: $180</span>
+    /* Highlight for Important Row */
+    .highlight {
+      background-color: #f0b400; /* Highlighting the $500 package */
+      color: #000;
+    }
+
+    .cta-button {
+      display: inline-block;
+      background-color: #0c6e40;  /* Dark Green for the CTA button */
+      color: white;
+      padding: 15px 40px;
+      text-decoration: none;
+      font-weight: 600;
+      border-radius: 5px;
+      margin-top: 30px;
+      text-align: center;
+      width: 100%;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #4c8c4a;
+    }
+
+    /* Financial Table Styles */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 30px;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    table th,
+    table td {
+      padding: 12px;
+      text-align: center;
+      border: 1px solid #ddd;
+    }
+
+    table th {
+      background-color: #0c6e40;
+      color: white;
+      font-weight: bold;
+    }
+
+    table td {
+      color: #333;
+    }
+
+    /* Headings Style */
+    h1, h2 {
+      color: #0c6e40; /* Green theme */
+      font-weight: bold;
+    }
+
+    h2 {
+      margin-top: 40px;
+      font-size: 1.3rem;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Investment Details Section -->
+  <div class="container">
+    <h1>Investment Overview</h1>
+    <p>Welcome to Meti Alpha's Investment Plans. We aim to deliver a consistent 40% weekly return on investments through a mix of Forex and commodities trading. Here is a breakdown of our investment packages, expected returns, and simple calculations for better transparency.</p>
+
+    <h2>Investment Packages</h2>
+    <div class="item">
+      <div class="item-header">Investment Amount: $100</div>
+      <div class="item-details">
+        <span>Weekly Return (40%): $40</span>
+        <span>Total after 2 Weeks: $180</span>
+      </div>
     </div>
+
+    <div class="item highlight">
+      <div class="item-header">Investment Amount: $500</div>
+      <div class="item-details">
+        <span>Weekly Return (40%): $200</span>
+        <span>Total after 2 Weeks: $700</span>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="item-header">Investment Amount: $1000</div>
+      <div class="item-details">
+        <span>Weekly Return (40%): $400</span>
+        <span>Total after 2 Weeks: $1400</span>
+      </div>
+    </div>
+
+    <h2>Financial Growth Projection</h2>
+    <p>Based on our trading strategies, you can see the potential growth of your investment over time:</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Investment Amount</th>
+          <th>Weekly Return (40%)</th>
+          <th>Total after 2 Weeks</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>$100</td>
+          <td>$40</td>
+          <td>$180</td>
+        </tr>
+        <tr>
+          <td>$500</td>
+          <td>$200</td>
+          <td>$700</td>
+        </tr>
+        <tr>
+          <td>$1000</td>
+          <td>$400</td>
+          <td>$1400</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <a href="investment.html" class="cta-button">Start Investing</a>
   </div>
 
-  <div class="item highlight">
-    <div class="item-header">Investment Amount: $500</div>
-    <div class="details">
-      <span>Weekly Return (40%): $200</span>
-      <span>Total after 2 Weeks: $700</span>
-    </div>
-  </div>
-
-  <div class="item">
-    <div class="item-header">Investment Amount: $1000</div>
-    <div class="details">
-      <span>Weekly Return (40%): $400</span>
-      <span>Total after 2 Weeks: $1400</span>
-    </div>
-  </div>
-</div>
+</body>
+</html>
