--- a/strategy.html
+++ b/strategy.html
@@ -5,74 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Investment Strategy | Meti Alpha</title>
   <style>
-    /* General Box Styles */
+    /* General Styles */
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #121212; /* Dark background for Binance-like look */
+      color: #E5E5E5; /* Light text for readability */
     }
 
+    /* Container for content */
     .container {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin: 30px auto;
-      max-width: 900px;
+      max-width: 1200px;
+      margin: 50px auto;
       padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      background-color: #fff;
-      border-radius: 10px;
+      background-color: #1F1F1F; /* Dark background */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      border-radius: 8px;
     }
 
-    .item {
-      padding: 20px;
-      background-color: #f9f9f9;
-      border-left: 4px solid #0c6e40; /* Investment indicator color */
+    /* Header Styles */
+    h1, h2 {
+      color: #F2B10F; /* Binance Yellow */
+      font-weight: 600;
       margin-bottom: 15px;
+    }
+
+    /* Section Style for Investment */
+    .item {
+      background-color: #222222; /* Slightly lighter for the cards */
+      border-left: 5px solid #F2B10F; /* Yellow border for emphasis */
+      padding: 20px;
+      margin-bottom: 20px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
     .item-header {
-      font-weight: bold;
-      background-color: #0c6e40; /* Dark Green for header */
-      color: white;
+      color: #F2B10F;
+      font-size: 1.2rem;
+      font-weight: 600;
       padding: 10px;
       text-align: center;
-      font-size: 1.2rem;
-      border-radius: 8px;
     }
 
     .item-details {
       display: flex;
       justify-content: space-between;
       font-size: 1rem;
+      color: #E5E5E5;
       margin-top: 15px;
-      color: #333;
     }
 
-    /* Highlight for Important Row */
+    /* Highlight the $500 investment */
     .highlight {
-      background-color: #f0b400; /* Highlighting the $500 package */
+      background-color: #F2B10F;
       color: #000;
+      font-weight: 600;
     }
 
     .cta-button {
       display: inline-block;
-      background-color: #0c6e40;  /* Dark Green for the CTA button */
-      color: white;
+      background-color: #F2B10F;  /* Binance Yellow */
+      color: black;
       padding: 15px 40px;
       text-decoration: none;
       font-weight: 600;
       border-radius: 5px;
+      width: 100%;
       margin-top: 30px;
       text-align: center;
-      width: 100%;
       transition: background-color 0.3s ease;
     }
 
     .cta-button:hover {
-      background-color: #4c8c4a;
+      background-color: #FF9A00;
     }
 
     /* Financial Table Styles */
@@ -80,37 +87,40 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 30px;
-      background-color: #fff;
+      background-color: #1F1F1F;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
     table th,
     table td {
-      padding: 12px;
+      padding: 15px;
       text-align: center;
-      border: 1px solid #ddd;
+      border: 1px solid #444444;
+      color: #E5E5E5;
     }
 
     table th {
-      background-color: #0c6e40;
-      color: white;
-      font-weight: bold;
+      background-color: #333333;
+      font-weight: 600;
     }
 
-    table td {
-      color: #333;
+    table tr:nth-child(even) {
+      background-color: #2C2C2C;
     }
 
-    /* Headings Style */
-    h1, h2 {
-      color: #0c6e40; /* Green theme */
-      font-weight: bold;
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .item-details {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .cta-button {
+        width: auto;
+      }
     }
 
-    h2 {
-      margin-top: 40px;
-      font-size: 1.3rem;
-    }
   </style>
 </head>
 <body>
@@ -118,9 +128,11 @@
   <!-- Investment Details Section -->
   <div class="container">
     <h1>Investment Overview</h1>
-    <p>Welcome to Meti Alpha's Investment Plans. We aim to deliver a consistent 40% weekly return on investments through a mix of Forex and commodities trading. Here is a breakdown of our investment packages, expected returns, and simple calculations for better transparency.</p>
+    <p>Welcome to Meti Alpha's Investment Plans. We aim to deliver a consistent 40% weekly return on investments through a mix of Forex and commodities trading. Below, we have outlined our packages and financial expectations with simple projections for clarity.</p>
 
     <h2>Investment Packages</h2>
+    
+    <!-- $100 Investment -->
     <div class="item">
       <div class="item-header">Investment Amount: $100</div>
       <div class="item-details">
@@ -129,6 +141,7 @@
       </div>
     </div>
 
+    <!-- $500 Investment -->
     <div class="item highlight">
       <div class="item-header">Investment Amount: $500</div>
       <div class="item-details">
@@ -137,6 +150,7 @@
       </div>
     </div>
 
+    <!-- $1000 Investment -->
     <div class="item">
       <div class="item-header">Investment Amount: $1000</div>
       <div class="item-details">
@@ -146,7 +160,8 @@
     </div>
 
     <h2>Financial Growth Projection</h2>
-    <p>Based on our trading strategies, you can see the potential growth of your investment over time:</p>
+    <p>Based on our trading strategy, here's a projection of your financial growth over a 2-week period:</p>
+    
     <table>
       <thead>
         <tr>
@@ -174,6 +189,7 @@
       </tbody>
     </table>
 
+    <!-- CTA Button to Start Investing -->
     <a href="investment.html" class="cta-button">Start Investing</a>
   </div>
 
