--- a/about.html
+++ b/about.html
@@ -31,29 +31,32 @@
       color: white;
     }
 
-    /* Navigation Bar */
+    /* Updated Navigation Bar */
     nav {
-      background-color: #1b1b1b;
+      background-color: #181a20;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
+      gap: 20px;
       padding: 15px 0;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     }
 
-    nav a {
-      color: white;
-      font-size: 1.1rem;
+    .nav-link {
+      color: #eaecef;
+      text-decoration: none;
       font-weight: 600;
-      text-transform: uppercase;
-      padding: 10px 15px;
-      transition: background-color 0.3s ease;
+      padding: 10px 18px;
+      border-radius: 5px;
+      transition: background 0.3s ease;
     }
 
-    nav a:hover {
-      background-color: #00b140;  /* Binance green */
-      border-radius: 5px;
+    .nav-link:hover {
+      background-color: #2b3139;
+    }
+
+    .nav-link.active {
+      background-color: #fcd535;
+      color: #000;
     }
 
     /* About Section */
@@ -105,11 +108,11 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="investment.html">Investment</a>
-    <a href="strategy.html">Strategy</a>
-    <a href="login.html">Login</a>
+    <a href="index.html" class="nav-link">Home</a>
+    <a href="about.html" class="nav-link">About</a>
+    <a href="investment.html" class="nav-link">Investment</a>
+    <a href="strategy.html" class="nav-link">Strategy</a>
+    <a href="login.html" class="nav-link">Login</a>
   </nav>
 
   <!-- About Section -->
