--- a/login.html
+++ b/login.html
@@ -1,83 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Meti Alpha</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | Meti Alpha</title>
   <style>
-    body {
+    /* General Page Styles */
+    * {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #181818;
-      color: #fff;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #181a20; /* Dark background to match Binance style */
+      color: #fff; /* White text color for contrast */
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: linear-gradient(45deg, #0f0f0f, #1c1c1c);
+      margin: 0;
     }
 
     .login-container {
-      background-color: #232323;
-      border-radius: 8px;
+      background-color: #1b1b1b; /* Dark background for the login box */
       padding: 40px;
-      width: 350px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 320px;
     }
 
-    h1 {
-      font-size: 2em;
-      color: #4CAF50; /* Binance-like green */
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #fcd535; /* Binance yellow */
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-size: 1rem;
+      color: #eaecef;
     }
 
     input {
       width: 100%;
       padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #333;
-      border-radius: 4px;
-      background-color: #2c2c2c;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      border: 1px solid #555;
+      font-size: 1rem;
+      background-color: #2d2d2d;
       color: #fff;
-      font-size: 1em;
+      transition: border 0.3s ease, box-shadow 0.3s ease;
     }
 
-    button {
-      background-color: #4CAF50; /* Binance-like green */
-      color: white;
-      padding: 15px 0;
+    input:focus {
+      border: 1px solid #fcd535; /* Binance yellow */
+      box-shadow: 0 0 5px rgba(252, 213, 53, 0.4);
+    }
+
+    .login-button {
       width: 100%;
+      padding: 12px;
+      background-color: #fcd535; /* Binance yellow */
+      color: black;
       border: none;
-      border-radius: 4px;
-      font-size: 1.1em;
+      border-radius: 5px;
+      font-size: 1.1rem;
       cursor: pointer;
-      transition: all 0.3s ease-in-out;
+      transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #45a049;
+    .login-button:hover {
+      background-color: #e6b800; /* Darker yellow on hover */
     }
 
-    footer {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 0.8em;
-      color: #888;
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: -10px;
+      margin-bottom: 20px;
+    }
+
+    .forgot-password {
+      text-align: center;
+      font-size: 0.9rem;
+    }
+
+    .forgot-password a {
+      color: #fcd535; /* Binance yellow */
+      text-decoration: none;
+    }
+
+    .forgot-password a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
   <div class="login-container">
-    <h1>Login to Meti Alpha</h1>
-    <input type="text" placeholder="Username" required>
-    <input type="password" placeholder="Password" required>
-    <button onclick="window.location.href='index.html'">Login</button>
+    <h2>Login to Meti Alpha</h2>
+
+    <!-- Error message -->
+    <div class="error-message" id="error-message"></div>
+
+    <form id="loginForm">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" placeholder="Enter username" required />
+
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Enter password" required />
+
+      <button type="submit" class="login-button">Login</button>
+    </form>
+
+    <div class="forgot-password">
+      <a href="#">Forgot Password?</a>
+    </div>
   </div>
 
-  <footer>&copy; 2025 Meti Alpha</footer>
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent form submission to demonstrate interactivity
+
+      // Get input values
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      // Validate inputs (example validation)
+      if (username === '' || password === '') {
+        displayError('Please fill in both fields.');
+        return;
+      }
+
+      // Simulate successful login (you can replace this with actual backend validation)
+      if (username === 'admin' && password === 'admin123') {
+        alert('Login Successful!');
+        window.location.href = 'index.html'; // Redirect to home page (index.html)
+      } else {
+        displayError('Invalid username or password.');
+      }
+    });
+
+    // Function to display error message
+    function displayError(message) {
+      const errorMessage = document.getElementById('error-message');
+      errorMessage.textContent = message;
+    }
+  </script>
 
 </body>
 </html>
