--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <span>MetiAlpha</span>
       </a>
       <div class="nav-links">
-        <a href="home.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
+        <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="about.html" class="nav-link active"><i class="fas fa-info-circle"></i> About</a>
         <a href="education.html" class="nav-link"><i class="fas fa-graduation-cap"></i> Education</a>
         <a href="strategies.html" class="nav-link"><i class="fas fa-chess"></i> Strategies</a>
